themes/Adwaita/gtk-3.0/gtk-widgets.css
/* ... */
GtkScale.slider,
GtkScale.slider:hover,
GtkScale.slider:insensitive {
    border-width: 0;
    border-radius: 0;
    border-style: none;

    color: alpha(@theme_base_color, 0.0);
    background-color: alpha(@theme_base_color, 0.0);

    /* background-image in -assets variant */
}

GtkScale.trough {
    border-width: 1;
    border-radius: 2;
    border-style: none;

    background-color: @scale_fill;

    /* border-image defined in the -assets variants */
}

GtkScale.trough:insensitive {
    background-color: @insensitive_bg_color;
    background-image: none;

    border-image: none;
    border-style: solid;
    border-color: @insensitive_border_color;
}

GtkScale.progressbar {
    background-color: @scale_progress_fill;

    border-width: 1;
    border-radius: 2;
    border-style: none;
    /* border-image defined in the -assets variants */

    -adwaita-progressbar-pattern: none;
}

GtkScale.mark {
    color: shade (@theme_bg_color, 0.56);
}

/**********
 * Frames *
 **********/
.frame {
    padding: 2;
    border-width: 0;
}

/* only render frames in a GtkScrolledWindow */
GtkScrolledWindow.frame {
    border-style: solid;
    border-color: darker (@theme_bg_color);
    border-width: 1;
    border-radius: 2;

    padding: 0;
}

/***********
 * Buttons *
 ***********/
.button,
.button.menuitem.menubar {
    padding: 1 4;
}

.button {
    -adwaita-focus-fill-color: alpha (@theme_base_color, 0.35);
    -adwaita-focus-border-gradient: -gtk-gradient (linear,
                                                   left top, left bottom,
                                                   from (alpha (@keyboard_focus_border_a, 0.62)),
                                                   to (alpha (@keyboard_focus_border_b, 0.62)));
    -adwaita-focus-border-radius: 1;
    -adwaita-focus-border-dashes: 0;
    -GtkWidget-focus-line-width: 2;

    -GtkButton-child-displacement-x: 1;
    -GtkButton-child-displacement-y: 1;
    -GtkButton-image-spacing: 4;
    -GtkButton-interior-focus: true;
    -GtkButton-default-border: 0;
    -GtkButton-inner-border: 0;

    color: @theme_text_color;

    border-radius: 3;
    border-width: 1;
    border-style: none;
    /* border-image in -assets variant */

    background-image: -gtk-gradient (linear,
				     left top, left bottom,
                                     from (@button_gradient_color_a),
                                     to (@button_gradient_color_b));
}

.button:hover,
.toolbar .button:hover {
    background-image: -gtk-gradient (linear,
				     left top, left bottom,
				     from (@button_hover_gradient_color_a),
				     to (@button_hover_gradient_color_b));
}

.button:active,
.toolbar .button:active,
.button:hover:active,
.toolbar .button:hover:active {
    background-image: -gtk-gradient (linear,
    				     left top, left bottom,
                                     from (@button_active_gradient_color_a),
				     to (alpha (@button_active_gradient_color_b, 0.13)));
}

.button:insensitive {
    background-image: none;
    background-color: @insensitive_bg_color;
    color: @insensitive_fg_color;

    border-image: none;
    border-style: solid;
}

.button.default {
    border-width: 2;
}

/*****************
 * Notebooks and *
 * tabs          *
 *****************/
.notebook {
    padding: 2;

    border-color: @notebook_border;
    border-style: solid;
    border-width: 1;

    background-color: @theme_base_color;

    -GtkNotebook-tab-overlap: 8;
    -GtkNotebook-tab-curvature: 6;
}

.notebook tab {
    padding: 3 8 0;
    background-image: -gtk-gradient (linear,
                                     left top, left bottom,
                                     from (@notebook_tab_gradient_a),
                                     to (@notebook_tab_gradient_b));

    -adwaita-focus-border-radius: 2;
}

.notebook tab:active {
    border-width: 1;

    -adwaita-border-gradient: -gtk-gradient (linear,
                                             left top, left bottom,
                                             from (@notebook_active_tab_border),
                                             to (@notebook_border));

    -adwaita-selected-tab-color: @notebook_selected_tab_color;
    background-image: -gtk-gradient (linear,
                                     left top, left bottom,
                                     from (shade (@theme_base_color, 0.98)),
                                     to (@theme_base_color));
}

.notebook tab .button,
.notebook tab .button:hover,
.notebook tab .button:hover:active {
    border-style: none;
    border-image: none;
    background-color: alpha (@theme_bg_color, 0.0);
    background-image: none;
}

/* FIXME: background behind tabs -- slight gradient continuing from menubar */

/**************
 * ComboBoxes *
 **************/

GtkComboBox {
    padding: 0;
    -GtkWidget-focus-padding: 0;
    -GtkWidget-focus-line-width: 0;

    -GtkComboBox-arrow-scaling: 0.5;
    -GtkComboBox-shadow-type: none;
}

GtkComboBox .separator {
    /* always disable separators */
    -GtkWidget-wide-separators: true;
    -GtkWidget-horizontal-separator: 0;
    -GtkWidget-vertical-separator: 0;
}

GtkComboBox .entry,
GtkComboBox .entry:nth-child(first) {
    border-width: 1 0 1 1;
    border-radius: 3 0 0 3;
    border-image-width: 2 0 2 2;
}

/* for RTL languages */
GtkComboBox .entry:nth-child(last) {
    border-width: 1 1 1 0;
    border-radius: 0 3 3 0;
    border-image-width: 2 2 2 0;
}

GtkComboBox .button {
    color: @internal_element_color;
    padding: 2 3 2 6;
}

GtkComboBox .button *:prelight {
    color: @theme_text_color;
}

.primary-toolbar GtkComboBox.combobox-entry .button,
GtkComboBox.combobox-entry .button,
.primary-toolbar GtkComboBox.combobox-entry .button:nth-child(last),
GtkComboBox.combobox-entry .button:nth-child(last) {
    border-width: 1 1 1 0;
    border-radius: 0 3 3 0;

    padding: 2 3;
    -adwaita-focus-fill-color: alpha (@theme_base_color, 0.0);
}
/* ... */

